Remove em-dashes

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </div>
 
       <p class="note">
-        Każdy gość otrzyma spersonalizowany kod QR — zeskanuj go, aby RSVP uzupełniło się automatycznie.
+        Każdy gość otrzyma spersonalizowany kod QR - zeskanuj go, aby RSVP uzupełniło się automatycznie.
       </p>
     </div>
   </header>
@@ -167,7 +167,7 @@
         <details>
           <summary>Prezenty</summary>
           <p>Największą radością będzie Twoja obecność.
-        Jeśli jednak zechcesz coś przynieść — zrób to po swojemu.
+        Jeśli jednak zechcesz coś przynieść - zrób to po swojemu.
         Największą radością jest dla nas Twoja obecność 🤍 Jeśli jednak myślisz o prezencie, zrób to w sposób, który jest dla Ciebie naturalny. Nie mamy żadnych oczekiwań, poza jedną małą prośbą - bez kwiatów (w domu rządzą koty 🐱)
         <p>
         </details>
