--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Weronika & Dawid - Wedding</title>
+  <title>Weronika & Dawid - Wesele</title>
 
   <link rel="icon" type="image/png" href="favicon.png">
   <link rel="stylesheet" href="assets/css/site.css" />
